@@ -1,3 +1,11 @@
+2009-12-28  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Rubber-stamped by Xan Lopez.
+
+        Follow Apple's decision to disable HTML DataGrid by default.
+
+        * GNUmakefile.am:
+
 2009-12-28  Gustavo Noronha Silva  <gns@gnome.org>
 
         Reviewed by Ariya Hidayat.
